$Id: CHANGES,v 1.29 2000/01/07 19:39:38 tiniou Exp $

Changes between versions 0.4b11 and 0.4b12 (released January 7, 1999)
=====================================================================

1.	Small fix in the dump man page. Thanks to Thorsten Kukuk 
	<kukuk@suse.de> for submitting the patch.

2.	Fix for the exit code when using the size estimate option of
	dump. Thanks to Matti Taskinen <mkt@rni.helsinki.fi> for
	submitting the patch.

3.	Handle EINTR in atomical reads/writes in dump, which was causing
	dump to fail on some systems. Thanks to Eric Jergensen
	<eric@dvns.com> for reporting the bug and submitting the patch.

4.	Handle more than 16 characters for the device names in dumpdates.
	(up to 255 now). Thanks to Rainer Clasen <bj@ncc.cicely.de> for
	tracking down the problem and proposing the solution.

5.	Fixed a bug in dump which prevented the creation of the
	dumpdates file when doing a 0-level dump without already
	having a dumpdates file. Thanks to Patrik Schindler 
	<poc@pocnet.net> for reporting the bug.

6.	Changed the way dump 'S' flag reports the size estimate
	from number of blocks into bytes (making it compatible
	with the Solaris version, and simplifying things for
	amanda users). Thanks to Jason L Tibbitts III 
	<tibbs@math.uh.edu> for reporting the bug.

Changes between versions 0.4b10 and 0.4b11 (released December 5, 1999)
======================================================================

1.	Added a '--enable-kerberos' to configure.

2.	Added a 'S' option to dump which determines the amount of space
	that is needed to perform the dump without actually doing it, similar
	to the Sun's ufsdump 'S' option. Patch contributed by Rob Cermak
	<cermak@ahab.rutgers.edu>.

3.	Added a 'M' multi-volume option to dump and restore which enables
	dumping to multiple files (useful when dumping to an ext2
	partition to make several dump files in order to bypass the 2GB
	file size limitation). The 'f' argument is treated as a prefix and