@@ -3,7 +3,7 @@ VPATH=		$(srcdir)
 top_builddir=	@top_builddir@
 
 VERSION=	0.4b12
-DATE=		January 7, 1999
+DATE=		January 8, 1999
 
 AR=		@AR@
 CC=		@CC@
